# capitar-zerotier-broker

./: .clang-format  .gitmodules  AUTH.adoc  CMakeLists.txt  PROTOCOL.adoc  README-TLS.adoc  README-worker.adoc  README.adoc  REST.adoc  RPC.adoc  SURVEY.adoc  auth.c  auth.h  base32.c  base32.h  build.sh  cJSON.c  cJSON.h  central.c  cfgfile.c  cfgfile.h  config.h.in  controller.c  controller.h  controller_zt1.c  controller_ztcentral.c  entity_roles.c  entity_roles.h  object.c  object.h  otp.c  otp.h  proxy.c  proxy.cfg  rpc.h  util.c  util.h  worker.c  worker.cfg  worker.h
static/proxy/: index.html
static/proxy/app/: index.html
static/proxy/app/components/: qr-code.vue
static/proxy/app/components/auth/: login.vue
static/proxy/app/components/controller/: controller.vue
static/proxy/app/components/device/: device.vue  my-devices.vue
static/proxy/app/components/error/: axios.vue
static/proxy/app/components/nav/: navbar.vue
static/proxy/app/components/network/: network.vue
static/proxy/app/components/settings/: gui-user.vue  totp.vue
static/proxy/app/components/user/: mgmt.vue  user.vue
static/proxy/app/zerotier/admin/: main.vue
static/proxy/components/auth/: login.vue
static/proxy/components/controller/: controller.vue
static/proxy/components/network/: network.vue
static/proxy/controller/: controller.vue
static/proxy/network/: network.vue
static/proxy/store/: store.vue
